# oneDNN_extension_demo

./: .gitignore  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  __init__.py  cpp_extension.py  example.py  frontend.py  prepack_backend.py  prepack_context.py  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  repack-python-wheels.yml
csrc/: op_context.cpp
oneDNN_extension_demo/: __init__.py  backend.py  cpp_extension.py  frontend.py  graph_mode.py  libdnnl.so.3  modules.py  ops.py  prepack_context.py  prepack_modules.py
oneDNN_extension_demo/csrc/: onednn_hijack.cpp  op_context.cpp  utils.h
oneDNN_extension_demo/csrc/kernels/: binary.cpp  eltwise.cpp  matmul.cpp  normalization.cpp  pooling.cpp  softmax.cpp  unary.cpp
tools/: build_onednn.sh  repack_python_wheels.py  smoke_test_hijack.py  smoke_test_wheel.py  verify_wheel_contents.py
