[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onednn-extension-demo"
description = "Lightweight oneDNN inference optimization frontend, inspired by IPEX"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "LICENSES/*", "THIRD_PARTY_NOTICES.md"]
requires-python = ">=3.9"
authors = [
    {name = "oneDNN Extension Demo Contributors"},
]
keywords = ["onednn", "mkldnn", "inference", "optimization", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
dev = [
    "numpy",
    "opencv-python-headless",
    "ultralytics",
]

[project.urls]
Homepage = "https://github.com/xzx157/oneDNN_extension_demo"
Repository = "https://github.com/xzx157/oneDNN_extension_demo"

[tool.setuptools.packages.find]
include = ["oneDNN_extension_demo*"]

[tool.setuptools.package-data]
oneDNN_extension_demo = ["csrc/*.cpp", "csrc/*.h", "csrc/kernels/*.cpp"]

[tool.cibuildwheel]
build = "cp39-manylinux_* cp310-manylinux_* cp311-manylinux_* cp312-manylinux_*"
build-frontend = "pip; args: --no-build-isolation"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
test-command = "env -u LD_LIBRARY_PATH python {project}/tools/smoke_test_wheel.py"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --exclude libtorch.so --exclude libtorch_cpu.so --exclude libtorch_python.so --exclude libtorch_global_deps.so --exclude libc10.so --exclude libdnnl.so.3 -w {dest_dir} {wheel}"
